# HPC

./: .gitignore  README.md
repo/: .kmeans.cpp.swo  .kmeans.cpp.swp  .kmeans_gpu.cu.swp  .kmeans_openmp.cpp.swp  CMakeLists.txt  kmeans  kmeans.cpp  kmeans_emnist  kmeans_gpu  kmeans_omp_target.cpp  kmeans_openmp  kmeans_openmp.cpp  kmeans_utils.cpp  kmeans_utils.h
